# Luma

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/Resources/Scenes/: AnimationTest.lscene  Desert.lscene  LightingTest.lscene  Sponza.lscene
Editor/Resources/Shaders/: AnimPBR_Mesh.glsl  BloomBlend.glsl  BloomBlur.glsl  EnvironmentIrradiance.glsl  EnvironmentMipFilter.glsl  EquirectangularToCubeMap.glsl  Outline.glsl  Outline_Anim.glsl  PBR_AnimMesh.glsl  PBR_StaticMesh.glsl  PreethamSky.glsl  Renderer2D.glsl  Renderer2D_Line.glsl  SceneComposite.glsl  SceneCompositeMS.glsl  ShadowMap.glsl  ShadowMap_Anim.glsl  StaticPBR_Mesh.glsl  shader.glsl  simplepbr.glsl
Editor/Resources/Textures/cerberus/: imgui.ini
Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  Luma-Editor.cpp
Engine/: CMakeLists.txt
Engine/Source/: Luma.hpp  lmpch.cpp  lmpch.hpp
Engine/Source/Luma/: EntryPoint.hpp
Engine/Source/Luma/Asset/: Asset.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetManager.cpp  AssetManager.hpp  AssetSerializer.cpp  AssetSerializer.hpp  CMakeLists.txt
Engine/Source/Luma/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.cpp  Base.hpp  Buffer.hpp  CMakeLists.txt  FastRandom.hpp  FatalSignal.cpp  FatalSignal.hpp  Hash.cpp  Hash.hpp  HashCRC32.cpp  Identifier.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  LogCustomFormatters.hpp  Memory.cpp  Memory.hpp  Platform.cpp  Platform.hpp  Ref.cpp  Ref.hpp  Thread.hpp  TimeStep.cpp  TimeStep.hpp  Timer.hpp  UUID.cpp  UUID.hpp  Version.hpp  Window.cpp  Window.hpp
Engine/Source/Luma/Debug/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.hpp  Profiler.hpp  RenderDoc.hpp
Engine/Source/Luma/Editor/: AssetEditorPanel.cpp  AssetEditorPanel.hpp  CMakeLists.txt  ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  DefaultAssetEditors.cpp  DefaultAssetEditors.hpp  EditorCamera.cpp  EditorCamera.hpp  ObjectsPanel.cpp  ObjectsPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Engine/Source/Luma/Embed/: LumaIcon.embed
Engine/Source/Luma/Events/: ApplicationEvent.hpp  CMakeLists.txt  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Source/Luma/ImGui/: CMakeLists.txt  ImGui.hpp  ImGuiBuild.cpp  ImGuiEx.cpp  ImGuiEx.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuizmo.cpp  ImGuizmo.h  VulkanImGui.cpp
Engine/Source/Luma/Math/: AABB.hpp  CMakeLists.txt  Mat4.cpp  Mat4.hpp  Math.cpp  Math.hpp  Noise.cpp  Noise.hpp  Ray.hpp
Engine/Source/Luma/Platform/: CMakeLists.txt
Engine/Source/Luma/Platform/Linux/: LinuxFileSystem.cpp  LinuxPlatform.cpp  LinuxProcessHelper.cpp  LinuxThread.cpp
Engine/Source/Luma/Platform/SDL/: SDLInput.cpp  SDLWindow.cpp  SDLWindow.hpp
Engine/Source/Luma/Platform/Win32/: Win32ProcessHelper.cpp
Engine/Source/Luma/Platform/Windows/: WindowsFileSystem.cpp  WindowsInput.cpp  WindowsInput.hpp  WindowsPlatform.cpp  WindowsThread.cpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/Source/Luma/Reflection/: CMakeLists.txt  MetaHelpers.hpp  TypeDescriptor.hpp  TypeName.hpp  TypeRegistry.hpp  TypeStructures.hpp  TypeUtils.hpp
Engine/Source/Luma/Renderer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Pipeline.cpp  Pipeline.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderCommandQueue.cpp  RenderCommandQueue.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.hpp  RendererCapabilities.hpp  RendererContext.cpp  RendererContext.hpp  RendererTypes.hpp  SceneEnvironment.cpp  SceneEnvironment.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Shader.cpp  Shader.hpp  (+9 more)
Engine/Source/Luma/Renderer/Backend/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.hpp  OpenGLImage.cpp  OpenGLImage.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLMaterial.cpp  OpenGLMaterial.hpp  OpenGLPipeline.cpp  OpenGLPipeline.hpp  OpenGLRenderPass.cpp  OpenGLRenderPass.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderUniform.cpp  OpenGLShaderUniform.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
Engine/Source/Luma/Renderer/Backend/Vulkan/: CMakeLists.txt  Vulkan.cpp  Vulkan.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDiagnostics.cpp  VulkanDiagnostics.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanImGuiLayer.cpp  VulkanImGuiLayer.hpp  VulkanImage.cpp  VulkanImage.hpp  (+20 more)
Engine/Source/Luma/Scene/: CMakeLists.txt  Components.hpp  Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Engine/Source/Luma/Serialization/: CMakeLists.txt  FileStream.cpp  FileStream.hpp  MemoryStream.cpp  MemoryStream.hpp  Serialization.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp
Engine/Source/Luma/Utilities/: AssimpLogStream.hpp  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.hpp  ContainerUtils.hpp  FileSystem.cpp  FileSystem.hpp  ProcessHelper.hpp  StringUtils.cpp  StringUtils.hpp  TypeInfo.hpp
Tests/: CMakeLists.txt
Tests/Source/: TestLayer.cpp  TestLayer.hpp  TestMain.cpp
Tests/Source/Core/: BufferTest.cpp  FastRandomTest.cpp  HashTest.cpp  IdentifierTest.cpp  TimestepTest.cpp  UUIDTest.cpp
Tests/Source/Math/: RayTest.cpp
Tests/Source/Reflection/: TypeStructuresTest.cpp
Tests/Source/Tests/: EventSystemTests.hpp  InputTests.hpp  MemoryTests.hpp  RendererTests.hpp  SerializationTests.hpp
(+5 files in other folders)
