set(RENDERER_SOURCES
		Buffer.cpp
		Camera.cpp
		Framebuffer.cpp
		Material.cpp
		Mesh.cpp
		RenderCommandQueue.cpp
		Renderer.cpp
		Renderer2D.cpp
		RenderPass.cpp
		SceneRenderer.cpp
		Shader.cpp
		Texture.cpp
		VertexArray.cpp
)

set(RENDERER_HEADERS
		Buffer.hpp
		Camera.hpp
		Framebuffer.hpp
		Material.hpp
		Mesh.hpp
		RenderCommandQueue.hpp
		Renderer.hpp
		Renderer2D.hpp
		RendererAPI.hpp
		RenderPass.hpp
		SceneRenderer.hpp
		Shader.hpp
		ShaderUniform.hpp
		Texture.hpp
		VertexArray.hpp
)

add_subdirectory(Backend/OpenGL)

target_sources(Luma
		PRIVATE
		${RENDERER_SOURCES}
		${RENDERER_HEADERS}
)