set(RENDERER_SOURCES
		Camera.cpp
		Framebuffer.cpp
		Image.cpp
		IndexBuffer.cpp
		Material.cpp
		Mesh.cpp
		MeshFactory.cpp
		Pipeline.cpp
		RenderCommandQueue.cpp
		Renderer.cpp
		Renderer2D.cpp
		RendererContext.cpp
		RenderPass.cpp
		SceneEnvironment.cpp
		SceneRenderer.cpp
		Shader.cpp
		Texture.cpp
		VertexBuffer.cpp
)

set(RENDERER_HEADERS
		Camera.hpp
		Framebuffer.hpp
		Image.hpp
		IndexBuffer.hpp
		Material.hpp
		Mesh.hpp
		MeshFactory.hpp
		Pipeline.hpp
		RenderCommandQueue.hpp
		Renderer.hpp
		Renderer2D.hpp
		RendererAPI.hpp
		RendererCapabilities.hpp
		RendererContext.hpp
		RendererTypes.hpp
		RenderPass.hpp
		SceneEnvironment.hpp
		SceneRenderer.hpp
		Shader.hpp
		ShaderUniform.hpp
		Texture.hpp
		VertexBuffer.hpp
)

add_subdirectory(Backend/OpenGL)
add_subdirectory(Backend/Vulkan)

target_sources(Luma
		PRIVATE
		${RENDERER_SOURCES}
		${RENDERER_HEADERS}
)