set(RENDERER_SOURCES
		Camera.cpp
		Framebuffer.cpp
		IndexBuffer.cpp
		Material.cpp
		Mesh.cpp
		Pipeline.cpp
		RenderCommandQueue.cpp
		Renderer.cpp
		Renderer2D.cpp
		RendererContext.cpp
		RenderPass.cpp
		SceneEnvironment.cpp
		SceneRenderer.cpp
		Shader.cpp
		Texture.cpp
		VertexBuffer.cpp
)

set(RENDERER_HEADERS
		Camera.hpp
		Framebuffer.hpp
		IndexBuffer.hpp
		Material.hpp
		Mesh.hpp
		Pipeline.hpp
		RenderCommandQueue.hpp
		Renderer.hpp
		Renderer2D.hpp
		RendererContext.hpp
		RendererAPI.hpp
		RenderPass.hpp
		SceneEnvironment.hpp
		SceneRenderer.hpp
		Shader.hpp
		ShaderUniform.hpp
		Texture.hpp
		VertexBuffer.hpp
)

add_subdirectory(Backend/OpenGL)

target_sources(Luma
		PRIVATE
		${RENDERER_SOURCES}
		${RENDERER_HEADERS}
)